--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 </div>
 
 <audio id="musik" loop>
-  <source src="https://www.bensound.com/bensound-music/bensound-romantic.mp3" type="audio/mpeg">
+  <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_5df2d2b730.mp3" type="audio/mpeg">
   Musik tidak didukung browser Anda.
 </audio>
 
