--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       }
 
     .with-background {
-      background: url('rantika.jpg') no-repeat center center fixed;
+      background: url('/rantika.jpg') no-repeat center center fixed;
       background-size: cover;
     }
   </style>
