--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       }
 
       #pesan p {
-  margin: 10px 0;
+  margin: 5px 0;
   padding: 0;
 }
 
@@ -210,17 +210,16 @@
     }
 
     .highlight-text {
-  font-size: 1.1em;
   margin: 12px 0;
-  padding: 8px;
-  background: rgba(255, 230, 240, 0.3);
-  border-radius: 8px;
-  transition: transform 0.3s ease;
+  padding: 8px 0;
+  border-left: 3px solid #ff3385;
+  padding-left: 15px;
 }
 
 .highlight-text strong {
   color: #e60073;
-  font-weight: 600;
+  font-size: 1.1em;
+  transition: all 0.3s ease;
 }
   </style>
 </head>
@@ -247,14 +246,15 @@
   <!-- Pesan tetap dipertahankan sesuai versi asli -->
   <div id="pesan" class="hidden">
   <p style="margin: 8px 0; line-height: 1.4">
-    Semoga Rantika panjang umur, sehat selalu,<br> 
-    penuh keberkahan dan impianmu tercapai.
+    Selamat Ulang Tahun, Rantika Wahyuni!<br>
+    Semoga panjang umur, sehat selalu, penuh keberkahan,<br> 
+    dan semua impianmu tercapai.
   </p>
-  <div style="margin: 15px 0; position: relative">
+  <div style="margin: 15px 0 10px; position: relative">
     <div class="highlight-text">
       Tahun ini... semoga kita <strong>menikah</strong>
     </div>
-    <p style="margin: 12px 0 0; font-style: italic">
+    <p style="margin: 8px 0 0; font-style: italic; font-size: 0.95em">
       Aamiin Ya Rabb.
     </p>
   </div>
