--- a/index.html
+++ b/index.html
@@ -268,11 +268,11 @@
 </div>
 
 <audio id="musik" loop>
-  <source src="https://cdn.pixabay.com/audio/2023/10/27/audio_5b740c4c3e.mp3" type="audio/mpeg">
+  <source src="https://assets.mixkit.co/music/preview/mixkit-piano-melody-2793.mp3" type="audio/mpeg">
 </audio>
 
 <audio id="confettiSound">
-  <source src="https://cdn.pixabay.com/audio/2022/08/04/audio_1727b3a0d3.mp3" type="audio/mpeg">
+  <source src="https://assets.mixkit.co/active_preview/sounds/2095.mp3" type="audio/mpeg">
 </audio>
 
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
