--- a/index.html
+++ b/index.html
@@ -268,11 +268,11 @@
 </div>
 
 <audio id="musik" loop>
-  <source src="https://assets.mixkit.co/music/preview/mixkit-piano-melody-2793.mp3" type="audio/mpeg">
+  <source src="https://cdn.pixabay.com/download/audio/2025/04/18/audio_01c8761f3e.mp3?filename=romantic-piano-329250.mp3" type="audio/mpeg">
 </audio>
 
 <audio id="confettiSound">
-  <source src="https://assets.mixkit.co/active_preview/sounds/2095.mp3" type="audio/mpeg">
+  <source src="https://www.myinstants.com/media/sounds/confetti-pop-sound.mp3" type="audio/mpeg">
 </audio>
 
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
